{
  "version": 4,
  "terraform_version": "0.12.5",
  "serial": 9,
  "lineage": "ab6aa372-050f-6306-387f-157f4ff33732",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-015c8ffb1a3e7bd77",
            "owner_id": "913745075337",
            "tags": {
              "Name": "terraform-aws-igw"
            },
            "vpc_id": "vpc-042399f47eed5aa71"
          },
          "depends_on": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform-public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0b07a328913311ce9",
            "owner_id": "913745075337",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-015c8ffb1a3e7bd77",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Terraform_Main_table-testing"
            },
            "vpc_id": "vpc-042399f47eed5aa71"
          },
          "depends_on": [
            "aws_internet_gateway.default",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform-public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-092713e7ab3e159ec",
            "route_table_id": "rtb-0b07a328913311ce9",
            "subnet_id": "subnet-0d04e934d19dfc65c"
          },
          "depends_on": [
            "aws_route_table.terraform-public",
            "aws_subnet.subnet1-public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_all",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:913745075337:security-group/sg-0adc84d3d077ba826",
            "description": "Allow all inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0adc84d3d077ba826",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_all",
            "name_prefix": null,
            "owner_id": "913745075337",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-042399f47eed5aa71"
          },
          "depends_on": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1-public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:913745075337:subnet/subnet-0d04e934d19dfc65c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.1.0/24",
            "id": "subnet-0d04e934d19dfc65c",
            "map_public_ip_on_launch": false,
            "owner_id": "913745075337",
            "tags": {
              "Name": "Terraform_Public_Subnet1-testing"
            },
            "vpc_id": "vpc-042399f47eed5aa71"
          },
          "depends_on": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet2-public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:913745075337:subnet/subnet-0a65c13d63badc269",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.2.0/24",
            "id": "subnet-0a65c13d63badc269",
            "map_public_ip_on_launch": false,
            "owner_id": "913745075337",
            "tags": {
              "Name": "Terraform_Public_Subnet2-testing"
            },
            "vpc_id": "vpc-042399f47eed5aa71"
          },
          "depends_on": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet3-public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:913745075337:subnet/subnet-0d3b03cad95fead1c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.3.0/24",
            "id": "subnet-0d3b03cad95fead1c",
            "map_public_ip_on_launch": false,
            "owner_id": "913745075337",
            "tags": {
              "Name": "Terraform_Public_Subnet3-testing"
            },
            "vpc_id": "vpc-042399f47eed5aa71"
          },
          "depends_on": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:913745075337:vpc/vpc-042399f47eed5aa71",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-03beeba5d4a858fe6",
            "default_route_table_id": "rtb-0e396c024fbbf1cab",
            "default_security_group_id": "sg-00ba491bb303e9b03",
            "dhcp_options_id": "dopt-42e8b439",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-042399f47eed5aa71",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0e396c024fbbf1cab",
            "owner_id": "913745075337",
            "tags": {
              "Name": "terraform-aws-testing"
            }
          }
        }
      ]
    }
  ]
}